# fractal_rs

./: Cargo.toml  README.md
src/: dec_soft_float.rs  executor.rs  fractal.rs  fractal.rs.orig  fractal_builder.rs  fractal_exotic.rs  fractals.rs  main.rs  opengl.rs  pipe.rs  quadruple.rs  soft_float.rs
src/before_refactor/: dec_soft_float.rs
